multi threaded but buggy

--- a/Winvert4.vcxproj
+++ b/Winvert4.vcxproj
@@ -123,6 +123,9 @@
     <Manifest Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DuplicationThread.h" />
+    <ClInclude Include="EffectWindow.h" />
+    <ClInclude Include="OutputManager.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="App.xaml.h">
       <DependentUpon>App.xaml</DependentUpon>
@@ -130,12 +133,16 @@
     <ClInclude Include="MainWindow.xaml.h">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </ClInclude>
+    <ClInclude Include="Subscription.h" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml" />
     <Page Include="MainWindow.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DuplicationThread.cpp" />
+    <ClCompile Include="EffectWindow.cpp" />
+    <ClCompile Include="OutputManager.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
