fixed some things broke some others

--- a/Winvert4.vcxproj.filters
+++ b/Winvert4.vcxproj.filters
@@ -231,5 +231,11 @@
     <Media Include="Assets\filter.svg">
       <Filter>Assets</Filter>
     </Media>
+    <Media Include="Assets\mapping_off.svg">
+      <Filter>Assets</Filter>
+    </Media>
+    <Media Include="Assets\mapping_on.svg">
+      <Filter>Assets</Filter>
+    </Media>
   </ItemGroup>
 </Project>
